syntax = "proto3";

enum Primitive {
    UNKNOWN = 0;
    TEXT = 1;
    URL = 2;
    NUMBER = 3;
    BOOLEAN = 4;
    BYTES = 5;
    OBJECT = 6;
}

enum HandleType {
    UNKNOWN = 0;
    SINGLETON = 1;
    COLLECTION = 2;
    BIG_COLLECTION = 3;
}

message EntityReference {

}

message Field {
    oneof type {
        Primitive primitive_type = 1;
        EntityReference reference = 2;
    }
    HandleType handle_type = 3;
}

message SchemaDescription {
    string pattern = 1;
    string plural = 2;
    string value = 3;
}

message Schema {
    repeated string name = 1;
    string hash = 2;
    map<string, Field> field_map = 3;
    SchemaDescription = 4;
}

message Recipe {

}

message Particle {

}

message Id {
    string root = 1;
    repeated string id_tree = 2;
}

message ManifestError {

}

message Manifest {
    Id id = 1;
    string filename = 2;
    repeated Manifest import = 3;
    repeated Schema schema = 4;
    repeated Particle particle = 5;
    repeated Recipe recipe = 6;
    repeated ManifestError error = 7;
}
